--- a/email/template.html
+++ b/email/template.html
@@ -2,7 +2,7 @@
 <html lang="en" style="margin: 0; padding: 0; box-sizing: border-box;">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>Welcome to Shibiko AI!</title>
+    <title>Welcome to SincereK 3D Prints!</title>
   </head>
   <body style="margin: 0; padding: 0; box-sizing: border-box;">
     <table style="box-sizing: border-box; padding: 0; margin: 0; max-width: 30rem; max-height: 40rem;">
@@ -18,7 +18,7 @@
       rgba(0, 0, 31, 0.9) 70%,
       rgba(0, 0, 31, 1) 100%
   );">
-                <h1 style="margin: 0; padding: 0; box-sizing: border-box; color: #ff8f00; margin-bottom: 0.5rem; font-size: 2rem; text-align: center;">Welcome to Shibiko AI!</h1>
+                <h1 style="margin: 0; padding: 0; box-sizing: border-box; color: #ff8f00; margin-bottom: 0.5rem; font-size: 2rem; text-align: center;">Welcome to SincereK 3D Prints!</h1>
                 <p style="margin: 0; padding: 0; box-sizing: border-box; color: #f1f1f1; font-size: 1.1rem; margin-bottom: 1rem; text-align: center;">Shibiko, here is your verification code:</p>
                 <div class="code" style="padding: 0; box-sizing: border-box; list-style: none; margin: 0 auto; display: block; text-align: center; font-size: 0; letter-spacing: -1em;">
                   <span class="code-bubble" style="box-sizing: border-box; color: #f1f1f1; font-size: 2rem; padding: 0.25rem 0.5rem; border: 2px solid #ff8f00; border-radius: 1rem; margin: 0.5rem 0.25rem 0; width: 2.5rem; text-align: center; display: inline-flex; letter-spacing: normal; white-space: nowrap;">1</span><span class="code-bubble" style="box-sizing: border-box; color: #f1f1f1; font-size: 2rem; padding: 0.25rem 0.5rem; border: 2px solid #ff8f00; border-radius: 1rem; margin: 0.5rem 0.25rem 0; width: 2.5rem; text-align: center; display: inline-flex; letter-spacing: normal; white-space: nowrap;">2</span><span class="code-bubble" style="box-sizing: border-box; color: #f1f1f1; font-size: 2rem; padding: 0.25rem 0.5rem; border: 2px solid #ff8f00; border-radius: 1rem; margin: 0.5rem 0.25rem 0; width: 2.5rem; text-align: center; display: inline-flex; letter-spacing: normal; white-space: nowrap;">3</span><span class="code-bubble" style="box-sizing: border-box; color: #f1f1f1; font-size: 2rem; padding: 0.25rem 0.5rem; border: 2px solid #ff8f00; border-radius: 1rem; margin: 0.5rem 0.25rem 0; width: 2.5rem; text-align: center; display: inline-flex; letter-spacing: normal; white-space: nowrap;">4</span><span class="code-bubble" style="box-sizing: border-box; color: #f1f1f1; font-size: 2rem; padding: 0.25rem 0.5rem; border: 2px solid #ff8f00; border-radius: 1rem; margin: 0.5rem 0.25rem 0; width: 2.5rem; text-align: center; display: inline-flex; letter-spacing: normal; white-space: nowrap;">5</span><span class="code-bubble" style="box-sizing: border-box; color: #f1f1f1; font-size: 2rem; padding: 0.25rem 0.5rem; border: 2px solid #ff8f00; border-radius: 1rem; margin: 0.5rem 0.25rem 0; width: 2.5rem; text-align: center; display: inline-flex; letter-spacing: normal; white-space: nowrap;">6</span>
